--- a/package.json
+++ b/package.json
@@ -31,5 +31,22 @@
   "bugs": {
     "url": "https://github.com/esgiprojetninja/fbapp/issues"
   },
-  "homepage": "https://github.com/esgiprojetninja/fbapp#readme"
+  "homepage": "https://github.com/esgiprojetninja/fbapp#readme",
+  "dependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.18.2",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-2": "^6.18.0",
+    "babel-register": "^6.18.0",
+    "ejs": "^2.5.2",
+    "material-ui": "^0.16.1",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "react-redux": "^4.4.6",
+    "react-tap-event-plugin": "^1.0.0",
+    "redux": "^3.6.0",
+    "requirejs": "^2.3.2",
+    "webpack": "^1.13.3"
+  }
 }
