--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "private": true,
   "scripts": {
     "prod": "gulp --production",
-    "dev": "gulp watch"
+    "dev": "gulp watch",
+    "watch-app": "webpack -d --watch --config webpack.config.js"
   },
   "devDependencies": {
     "bootstrap-sass": "^3.3.7",
