a shit load of stuff

--- a/package.json
+++ b/package.json
@@ -41,12 +41,14 @@
     "babel-preset-stage-2": "^6.18.0",
     "babel-register": "^6.18.0",
     "ejs": "^2.5.2",
+    "isomorphic-fetch": "^2.2.1",
     "material-ui": "^0.16.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.6",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0",
     "requirejs": "^2.3.2",
     "webpack": "^1.13.3"
   }
