--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ public/js/bundle.js
 public/js/dist/bundle.js.map
 public/js/dist/bundle.min.js
 public/js/dist/bundle.min.js.map
+.vagrant/machines/default/virtualbox/private_key
+Vagrantfile
+Homestead.yaml
+toto.txt
