--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
     "babel-register": "^6.18.0",
     "ejs": "^2.5.2",
     "material-ui": "^0.16.1",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
+    "react": "~15.3.2",
+    "react-dom": "~15.3.2",
     "react-redux": "^4.4.6",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.6.0",
