--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ Homestead.json
 Homestead.yaml
 .env
 public/css/*.css.map
+public/css/*
 public/js/dist/bundle.js
 public/js/bundle.js
 public/js/dist/bundle.js.map
