--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
         "doctrine/dbal": "^2.5",
-        "laravel/socialite": "^2.0"
+        "laravel/socialite": "^2.0",
+        "facebook/graph-sdk": "^5.4"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
