--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "devDependencies": {
     "bootstrap-sass": "^3.3.7",
     "gulp": "^3.9.1",
+    "jasmine": "^2.5.3",
     "jquery": "^3.1.0",
+    "karma": "^1.4.0",
     "laravel-elixir": "^6.0.0-14",
     "laravel-elixir-vue-2": "^0.2.0",
     "laravel-elixir-webpack-official": "^1.0.2",
