--- a/package.json
+++ b/package.json
@@ -14,15 +14,22 @@
     ]
   },
   "devDependencies": {
+    "babel-loader": "^6.2.10",
     "bootstrap-sass": "^3.3.7",
     "gulp": "^3.9.1",
     "jasmine": "^2.5.3",
     "jquery": "^3.1.0",
     "karma": "^1.4.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.1",
     "laravel-elixir": "^6.0.0-14",
     "laravel-elixir-vue-2": "^0.2.0",
     "laravel-elixir-webpack-official": "^1.0.2",
     "lodash": "^4.16.2",
+    "phantomjs-prebuilt": "^2.1.14",
     "vue": "^2.0.1",
     "vue-resource": "^1.0.3"
   },
