--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jquery": "^3.1.0",
     "karma": "^1.4.0",
     "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-junit-reporter": "^1.2.0",
