--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 /storage/*.key
 /vendor
 /.idea
+resources/assets/js/lib/pictureGame/__tests__/coverage/
+resources/assets/js/lib/pictureGame/__tests__/reporter/
 Homestead.json
 Homestead.yaml
 .env
