--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "dev": "gulp watch",
     "watch-app": "webpack -d --watch --config webpack.config.js",
     "test": "karma start",
-    "test-dev": "karma start --no-single-run",
-    "test:browser": "wdio"
+    "test-dev": "karma start --no-single-run"
   },
   "jest": {
     "verbose": true,
