--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "babel-loader": "^6.2.10",
+    "babel-plugin-istanbul": "^3.1.2",
     "bootstrap-sass": "^3.3.7",
     "gulp": "^3.9.1",
     "jasmine": "^2.5.3",
