improved coverage while gorfy was fucking around

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp": "^3.9.1",
     "jasmine": "^2.5.3",
     "jquery": "^3.1.0",
+    "jquery-mockjax": "^2.2.1",
     "karma": "^1.4.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
