--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "babel-loader": "^6.2.10",
     "babel-plugin-istanbul": "^3.1.2",
     "bootstrap-sass": "^3.3.7",
+    "cucumber": "^1.3.1",
+    "geckodriver": "^1.3.0",
     "gulp": "^3.9.1",
     "jasmine": "^2.5.3",
     "jquery": "^3.1.0",
