--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-plugin-istanbul": "^3.1.2",
     "bootstrap-sass": "^3.3.7",
     "cucumber": "^1.3.1",
+    "expect": "^1.20.2",
     "geckodriver": "^1.3.0",
     "gulp": "^3.9.1",
     "jasmine": "^2.5.3",
