--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "laravel-elixir-webpack-official": "^1.0.2",
     "lodash": "^4.16.2",
     "phantomjs-prebuilt": "^2.1.14",
+    "selenium-standalone": "^6.0.1",
     "vue": "^2.0.1",
     "vue-resource": "^1.0.3",
     "wdio-cucumber-framework": "^0.2.15",
