--- a/package.json
+++ b/package.json
@@ -76,8 +76,8 @@
     "ejs": "^2.5.2",
     "material-ui": "^0.16.1",
     "react": "~15.3.2",
+    "react-color": "^2.11.1",
     "react-dom": "~15.3.2",
-    "react-dropzone": "^3.9.1",
     "react-image-lightbox": "^3.4.1",
     "react-redux": "^4.4.6",
     "react-router": "^3.0.0",
