--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "ejs": "^2.5.2",
     "material-ui": "^0.16.1",
     "react": "~15.3.2",
+    "react-bootstrap": "^0.30.7",
     "react-color": "^2.11.1",
     "react-dom": "~15.3.2",
     "react-dropzone": "^3.9.2",
