--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "babel-preset-stage-2": "^6.18.0",
     "babel-register": "^6.18.0",
     "draft-js": "^0.10.0",
+    "draftjs-to-html": "^0.6.3",
     "ejs": "^2.5.2",
     "material-ui": "^0.16.1",
     "react": "~15.3.2",
