--- a/package.json
+++ b/package.json
@@ -73,7 +73,9 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-2": "^6.18.0",
     "babel-register": "^6.18.0",
+    "draft-convert": "^1.4.0",
     "draft-js": "^0.10.0",
+    "draft-js-import-html": "^0.3.2",
     "draftjs-to-html": "^0.6.3",
     "ejs": "^2.5.2",
     "material-ui": "^0.16.1",
