--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "gulp watch",
     "watch-app": "webpack -d --watch --config webpack.config.js",
     "test": "karma start",
-    "test-dev": "karma start --no-single-run"
+    "test-dev": "karma start --no-single-run",
+    "selenium:start": "java -jar /Users/roland/dev/php/fb_app/fbapp/resources/assets/js/lib/pictureGame/__browser_tests__/selenium-server-standalone-3.0.1.jar"
   },
   "jest": {
     "verbose": true,
